--- a/src/components/alg/alg-conspect/sp/pages/elem-sp23.html
+++ b/src/components/alg/alg-conspect/sp/pages/elem-sp23.html
@@ -519,9 +519,91 @@ int main() {
   <div class="anchor" id="task8"></div>
   <h3>Задача H. Число сочетаний -2</h3>
 
-  <div><i>Ограничение по времени с
-  <br>Ограничение по памяти мб</i></div>
+  <div><i>Ограничение по времени 0.5с
+  <br>Ограничение по памяти 128мб</i></div>
+  <p>Числом сочетаний из n элементов по k (C<sub>n</sub><sup>k</sup>) — называется набор k элементов, выбранных из данных n элементов, причем наборы, отличающиеся только порядком следования элементов (но не составом), считаются одинаковыми. Требуется найти число сочетаний из n по k (C<sub>n</sub><sup>k</sup>). В данной задаче НЕ ТРЕБУЕТСЯ выводить ответ по модулю 10⁹ + 7, т.к. гарантируется что ответ не превысит значения 9 * 10¹⁸</p>
 
+  <h4>Входные данные</h4>
+  <p>На ввод подаются числа n и k разделённые пробелом. 1 ≤ n ≤ 10⁷, 0 ≤ k ≤ n</p>
+
+  <h4>Выходные данные</h4>
+  <p>Вывести число сочетаний из n по k (C<sub>n</sub><sup>k</sup>).</p>
+
+  <h4>Пример 1</h4>
+  <code>4 1</code>
+  <code>4</code>
+
+  <h4>Пример 2</h4>
+  <code>4 2</code>
+  <code>6</code>
+
+  <h4>Пример 3</h4>
+  <code>8 3</code>
+  <code>56</code>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Зная треугольник Паскаля и ограничение, что ответ помещается в 9 * 10¹⁸, можно предположить что ответ расположенный в треугольнике Паскаля, будет находиться только в небольшой полоске около двух боковых сторон треугольника. Но треугольник Паскаля все равно не удастся построить, потому что он требует n² по памяти. А если у нас входные элементы до 10⁷, то 10¹⁴ нам уже не подойдет.</p>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;iomanip&gt;
+#include &lt;vector&gt;
+
+using namespace std;
+
+int main() {
+  // ускорение ввода-вывода
+  ios::sync_with_stdio(0);
+  cin.tie(0);
+
+  // ввод данных
+  long long n, k;
+  cin >> n >> k;
+
+  // решение
+  vector&lt;long long&gt; Level(1e7);
+
+  // для упрощения вычислений с факториалами
+  int min_el = min(k, n - k);
+  int max_el = max(k, n - k);
+
+  // считаем числитель
+  for (int i = max_el + 1; i &lt;= n; i++) {
+    int tmp = i;
+    for (long long j = 2; j * j &lt;= tmp; j++) {
+      while (tmp % j == 0) {
+        Level[j]++;
+        tmp /= j;
+      }
+    }
+    Level[tmp]++;
+  }
+
+  // считаем знаменатель
+  for (int i = 1; i &lt;= min_el; i++) {
+    int tmp = i;
+    for (long long j = 2; j * j &lt;= tmp; j++) {
+      while (tmp % j == 0) {
+        Level[j]--;
+        tmp /= j;
+      }
+    }
+    Level[tmp]--;
+  }
+
+  long long ans = 1;
+  for (int i = 1; i &lt; Level.size(); i++) {
+    while (Level[i] > 0) {
+      ans *= i;
+      Level[i]--;
+    }
+  }
+
+  // вывод результата
+  cout &lt;&lt; ans;
+}
+</pre>
+  </details>
 </article>
 
 
@@ -844,6 +926,59 @@ YABSA
 *.**
 </pre>
   <code>9</code>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Если у вершина одна по горизонтали или вертикали, то с ней нельзя построить прямоугольный треугольник. Если у вершины есть еще одна вершина по горизонтали и одна по вертикали, то с ней можно построить один прямоугольный треугольник. Если у вершины есть еде одна по вертикали и две по горизонтали (или одна по горизонтали и две по вертикали), то с ней можно построить два прямоугольных треугольника.</p>
+    <p>Нужно пройтись по всем вершинам и посчитать сколько у каждой соседей по горизонтали и по вертикали. Произведение всех соседей это сколько треугольников можо построить с этой вершиной в прямом угле.</p>
+    <p>Решим задачу динамическим программированием за O(n²). Заранее посчитав сколько звездочек в каждой строке и каждом столбце.</p>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;iomanip&gt;
+#include &lt;vector&gt;
+
+using namespace std;
+
+int main() {
+  // ускорение ввода-вывода
+  ios::sync_with_stdio(0);
+  cin.tie(0);
+
+  // ввод данных
+  long long n, m;
+  cin >> n >> m;
+
+  vector&lt;string&gt; A(n);
+  for (int i = 0; i &lt; n; i++) {
+    cin >> A[i];
+  }
+
+  // решение
+  vector&lt;long long&gt; Count_left(n);
+  vector&lt;long long&gt; Count_up(m);
+  for (int i = 0; i &lt; n; i++) {
+    for (int j = 0; j &lt; m; j++) {
+      if (A[i][j] == '*') {
+        Count_left[i]++;
+        Count_up[j]++;
+      }
+    }
+  }
+
+  long long res = 0;
+  for (int i = 0; i &lt; n; i++) {
+    for (int j = 0; j &lt; m; j++) {
+      if (A[i][j] == '*') {
+        res += (Count_left[i] - 1) * (Count_up[j] - 1);
+      }
+    }
+  }
+
+  // вывод результата
+  cout &lt;&lt; res;
+}
+</pre>
+  </details>
 </article>
 
 
