--- a/src/components/front/front-learned/pages/elem-day.html
+++ b/src/components/front/front-learned/pages/elem-day.html
@@ -240,5 +240,29 @@
   <li class="yellow">2025.04.18 пт
     <br>1. <strong>Книга</strong> <i>2020 Дейтел - Как программировать на C 1000стр</i> прочитать 190-210стр
     <br>2. <strong>Курс</strong> <i>2024 Спортивное программирования ЯрГУ</i> Codeforces Round 1003 записать условия задач
+    <br>3. <strong>Курс</strong> <i>2024 Спортивное программирования ЯрГУ</i> Занятие 23 начать
+  </li>
+  <li class="yellow">2025.04.21 пн
+    <br>1. <strong>Книга</strong> <i>2020 Дейтел - Как программировать на C 1000стр</i> прочитать 210-220стр
+    <br>2. <strong>Курс</strong> <i>2024 Спортивное программирования ЯрГУ</i> Codeforces Round 1006 записать условия задач
+    <br>3. <strong>Курс</strong> <i>2024 Спортивное программирования ЯрГУ</i> Занятие 23 закончить
+    <br>4. <strong>Курс</strong> <i>2024 Спортивное программирования ЯрГУ</i> Codeforces Round 1003 начать
+  </li>
+  <li class="yellow">2025.04.22 вт
+    <br>1. <strong>Книга</strong> <i>2020 Дейтел - Как программировать на C 1000стр</i> прочитать 220-230стр
+    <br>2. <strong>Курс</strong> <i>2024 Спортивное программирования ЯрГУ</i> Занятие 24 записать условия здач
+    <br>3. <strong>Курс</strong> <i>2024 Спортивное программирования ЯрГУ</i> Codeforces Round 1003 закончить
+    <br>4. <strong>Курс</strong> <i>2024 Спортивное программирования ЯрГУ</i> Codeforces Round 1013 записать условия задач
+  </li>
+  <li class="yellow">2025.04.23 ср
+    <br>1. <strong>Книга</strong> <i>2020 Дейтел - Как программировать на C 1000стр</i> прочитать 230-240стр
+    <br>2. <strong>Курс</strong> <i>2024 Спортивное программирования ЯрГУ</i> Codeforces Round 1016 записать условия задач
+    <br>3. <strong>Курс</strong> <i>2024 Спортивное программирования ЯрГУ</i> Codeforces Round 1017 записать условия задач
+    <br>4. <strong>Курс</strong> <i>2024 Спортивное программирования ЯрГУ</i> Занятие 24 начать
+  </li>
+  <li class="yellow">2025.04.24 чт
+    <br>1. <strong>Книга</strong> <i>2020 Дейтел - Как программировать на C 1000стр</i> прочитать 240-260стр
+    <br>2. <strong>Курс</strong> <i>2024 Спортивное программирования ЯрГУ</i> Занятие 25 записать условия здач
+    <br>3. <strong>Курс</strong> <i>2024 Спортивное программирования ЯрГУ</i> Занятие 24 закончить
   </li>
 </ol>
